--- a/DrawerLayoutTest/app/src/main/res/layout/content_main.xml
+++ b/DrawerLayoutTest/app/src/main/res/layout/content_main.xml
@@ -1,14 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main" tools:context=".MainActivity">
+    android:layout_width="match_parent"
+    android:layout_height="152dp"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/bind_button"
+        android:layout_width="330dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="绑定"
+        android:gravity="center"
+        android:clickable="true"
+        android:background="@drawable/red_button_selector"
+        android:textColor="#ffffff"/>
+
+
+    <RelativeLayout
+        android:layout_above="@id/bind_button"
+        android:layout_alignLeft="@id/bind_button"
+        android:layout_alignRight="@id/bind_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="28dp">
+        <EditText
+            android:id="@+id/edit_text"
+            android:layout_above="@+id/ver_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="5dp"
+            android:hint="输入您的手机号"
+            android:textColor="#3b3b3b"
+            android:textColorHint="#adadad"
+            android:background="@null"
+            android:textSize="17sp"/>
+        <View
+            android:id="@+id/ver_divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_above="@+id/text"
+            android:background="#c6c6c6"></View>
+        <TextView
+            android:id="@+id/text"
+            android:paddingTop="5dp"
+            android:layout_alignParentBottom="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="手机号用来联系您领取奖品，请填写真实有效的信息"
+            android:textColor="#adadad"/>
+    </RelativeLayout>
+
+
+
+
 </RelativeLayout>
+
