--- a/DrawerLayoutTest/app/src/main/res/values/colors.xml
+++ b/DrawerLayoutTest/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="transport">#00000000</color>
+    <color name="title_bar_back_on">#00000000</color>
 </resources>
